# greywater

./: Cargo.toml  README.md  sdkconfig.defaults
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: comms.rs  lib.rs  main.rs  sensors.rs
