[package]
name = "distance"
version = "0.1.0"
authors = ["Kevin Clark <kevin.clark@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
embedded-svc = "0.21"
esp-idf-svc = "0.41"
log = "0.4"
anyhow = "1"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
